Fix horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
-html {
-    background-color: #09192F;
-    font-family: "Maven Pro", sans-serif;
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  background-color: #09192F;
 }
-
